--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SetupWizard</string>
     <string name="next">Next</string>
     <string name="skip">Skip</string>
-    <string name="welcome_to_grapheneos">Welcome to GrapheneOS</string>
+    <string name="welcome_to_grapheneos">Welcome to OdysseyOS</string>
     <string name="grapheneos_icon">GrapheneOS icon</string>
     <string name="grapheneos_desc">Privacy and security, crafted for your mobile device, usable by everyone.</string>
     <string name="lets_setup_your_device">Let\'s set up your device in a few steps.</string>
@@ -17,7 +17,7 @@
     <string name="location_services">Location services</string>
     <string name="location_access_desc">Allow apps that have asked your permission to use your location information. This may include your current location and past locations.</string>
     <string name="restore_apps_and_data"><![CDATA[Restore apps & data]]></string>
-    <string name="data_restore_desc">If you have a backup from your previous GrapheneOS device, you can restore it here.</string>
+    <string name="data_restore_desc">If you have a backup from your previous OdysseyOS device, you can restore it here.</string>
     <string name="you_re_all_set_now">You\'re all set now!</string>
     <string name="device_setup_done_desc">You\'re ready to start using your device</string>
     <string name="profile_setup_done_desc">You\'re ready to start using your user profile</string>
@@ -40,7 +40,7 @@
     <string name="try_it">Try it</string>
     <string name="oem_unlocked_warning">The bootloader is unlocked and software integrity can not be guaranteed. Any data stored on this device may be available to attackers. Do not store any sensitive data on this device.</string>
     <string name="visit_this_link_on_another_device">Visit this link on another device:</string>
-    <string name="oem_lock_url" translatable="false">grapheneos.org/UBL</string>
+    <string name="oem_lock_url" translatable="false">sleke.io/UBL</string>
     <string name="lock_your_bootloader">Lock your bootloader</string>
     <string name="oem_unlock_fullscreen_desc">
         The bootloader is unlocked and software integrity
